--- a/styles.css
+++ b/styles.css
@@ -21,13 +21,17 @@ body {
   background-color: #f7f7f7;
   padding: 20px 40px;
   margin-bottom: 60px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.clearfix::after {
+/* .clearfix::after {
   clear: both;
   content: '';
   display: block;
-}
+} */
 
 nav {
   font-size: 18px;
@@ -38,6 +42,18 @@ article {
   margin-bottom: 60px;
   width: 825px;
   /* float: left; */
+}
+
+.author {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .post-header {
@@ -51,6 +67,20 @@ aside {
   padding: 50px 40px;
   width: 300px;
   /* float: right; */
+}
+
+ul.related li {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
 }
 
 footer {
@@ -115,8 +145,8 @@ li:last-child {
   font-style: italic;
   font-size: 18px;
   /* float: left; */
-  margin-top: 10px;
-  margin-left: 20px;
+  margin-left: 15px;
+  align-self: center;
 }
 
 .author-img {
@@ -129,8 +159,9 @@ li:last-child {
 }
 
 .related-author {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 14px;
+  font-weight: normal;
+  margin-bottom: 0;
 }
 
 .related {
@@ -173,7 +204,7 @@ a:active {
 
 nav a:link {
   margin-right: 30px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 
   display: inline-block;
 }
