style(NAV): add underline offset

--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,7 @@ a:hover {
   color: orangered;
   font-weight: bold;
   text-decoration: underline orangered;
+  text-underline-offset: 6px;
 }
 
 a:active {
